--- a/collections/help.html
+++ b/collections/help.html
@@ -42,7 +42,7 @@
 <h2>3. Future plans</h2>
 <p>I have several ideas for future improvements.</p>
 <h3>Improved search</h3>
-<p>Currently the search can only give you the chapter where a phrase occurs. In future it should be able to show you the exact verse. It should also be possible to highlight the search term in the text.</p>
+<p>Currently the search has some minor issues. For example, it should be possible to configure the number of results. It should also be possible to highlight the search term in the text.</p>
 <h3>Different versification schemes</h3>
 <p>All bibles should internally use the same versification scheme. Currently they just use what the source uses. In almost every case this shouldn’t be a problem, but it might be improved in future. This should also include solutions to handle books like Daniel, which sometimes is split into two books.</p>
 <h3>Improved comparing translations</h3>
