--- a/collections/test-de.html
+++ b/collections/test-de.html
@@ -11,11 +11,11 @@
 <p>Einleitung</p>
 </section>
 <section data-abbr="1">
-<p id="test-1">1. Erster Absatz im ersten Abschnitt.</p>
-<p id="test-2">2. Zweiter Absatz im ersten Abschnitt mit <a href="#test-3" class="preview">Link zum ersten Absatz im zweiten Abschnitt</a>.</p>
+<p id="test-1" data-abbr="(1)">1. Erster Absatz im ersten Abschnitt.</p>
+<p id="test-2" data-abbr="(2)">2. Zweiter Absatz im ersten Abschnitt mit <a href="#test-3" class="preview">Link zum ersten Absatz im zweiten Abschnitt</a>.</p>
 </section>
 <section data-abbr="2">
-<p id="test-3">3. Erster Absatz im zweiten Abschnitt.<span class="fn" data-content="Fußnote mit &lt;a href=&quot;#test2-1&quot; class=&quot;preview&quot;&gt;Link zum zweiten Buch&lt;/a&gt;.">*</span></p>
+<p id="test-3" data-abbr="(3)">3. Erster Absatz im zweiten Abschnitt.<span class="fn" data-content="Fußnote mit &lt;a href=&quot;#test2-1&quot; class=&quot;preview&quot;&gt;Link zum zweiten Buch&lt;/a&gt;.">*</span></p>
 </section>
 </article>
 <div title="Untergruppe">
@@ -24,11 +24,11 @@
 <p>Einleitung</p>
 </section>
 <section data-abbr="1">
-<p id="test2-1">1. Erster Absatz im ersten Abschnitt.</p>
-<p id="test2-2">2. Zweiter Absatz im ersten Abschnitt mit <a href="#test-3" class="preview">Link zum ersten Absatz im zweiten Abschnitt des ersten Buchs</a>.</p>
+<p id="test2-1" data-abbr="(1)">1. Erster Absatz im ersten Abschnitt.</p>
+<p id="test2-2" data-abbr="(2)">2. Zweiter Absatz im ersten Abschnitt mit <a href="#test-3" class="preview">Link zum ersten Absatz im zweiten Abschnitt des ersten Buchs</a>.</p>
 </section>
 <section data-abbr="2">
-<p id="test2-3">3. Erster Absatz im zweiten Abschnitt.<span class="fn" data-content="Fußnote">*</span></p>
+<p id="test2-3" data-abbr="(3)">3. Erster Absatz im zweiten Abschnitt.<span class="fn" data-content="Fußnote">*</span></p>
 </section>
 </article>
 </div>
