--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script src="res/lib/zip.js" defer></script>
 <script src="res/util.js" defer></script>
 <script src="res/file.js" defer></script>
+<script src="res/search.js" defer></script>
 <script src="res/parser/bible-data.js" defer></script>
 <script src="res/parser/book-builder.js" defer></script>
 <script src="res/parser/generic-html-converter.js" defer></script>
