--- a/collections/test-de.html
+++ b/collections/test-de.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="utf-8">
 <title>Test-Sammlung</title>
+<style>
+.test {
+	font-weight: bold;
+}
+</style>
 </head>
 <body data-type="test" data-abbr="Test [de]" data-desc="Test-Sammlung">
 <div title="Gruppe">
@@ -11,7 +16,7 @@
 <p>Einleitung</p>
 </section>
 <section data-abbr="1">
-<p id="test-1" data-abbr="(1)">1. Erster Absatz im ersten Abschnitt.</p>
+<p id="test-1" data-abbr="(1)">1. Erster <span class="test">Absatz</span> im ersten Abschnitt.</p>
 <p id="test-2" data-abbr="(2)">2. Zweiter Absatz im ersten Abschnitt mit <a href="#test-3" class="preview">Link zum ersten Absatz im zweiten Abschnitt</a>.</p>
 </section>
 <section data-abbr="2">
