allow different versification schemes for SWORD

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src="res/file.js" defer></script>
 <script src="res/search.js" defer></script>
 <script src="res/parser/bible-data.js" defer></script>
+<script src="res/parser/versification.js" defer></script>
 <script src="res/parser/book-builder.js" defer></script>
 <script src="res/parser/generic-html-converter.js" defer></script>
 <script src="res/parser/parser.js" defer></script>
