--- a/convert.html
+++ b/convert.html
@@ -8,6 +8,7 @@
 <script src="res/util.js" defer></script>
 <script src="res/file.js" defer></script>
 <script src="res/parser/bible-data.js" defer></script>
+<script src="res/parser/versification.js" defer></script>
 <script src="res/parser/book-builder.js" defer></script>
 <script src="res/parser/generic-html-converter.js" defer></script>
 <script src="res/parser/parser.js" defer></script>
