allow exporting/importing bookmarks

--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
 <p><label>User CSS: <textarea data-config="css" rows="5"></textarea></p>
 <p><label><input data-config="preview" type="checkbox"> Show a preview for references</label></p>
 <p><label><input data-config="resume" type="checkbox"> Resume reading at previous place</label></p>
-<h2>Import</h2>
+<h2>Bookmarks</h2>
+<p><button data-action="export-bookmarks">Export</button></p>
+<p><button data-action="import-bookmarks">Import</button></p>
+<h2>Import collections</h2>
 <p><button data-action="import-collection">Select file</button></p>
 <p id="drop-file">Or drop file here</p>
 <h2>Manage collections</h2>
